--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -28,18 +28,19 @@
                 android:id="@+id/tvCarListingName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvItemCarOwner"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="0dp"
                 android:layout_toEndOf="@+id/ivCarImage"
+                android:textSize="18sp"
+                android:textStyle="bold"
                 tools:text="Amazing car" />
 
             <TextView
                 android:id="@+id/tvCarRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvModel"
-                android:layout_marginStart="10dp"
+                android:layout_below="@+id/tvNumSeats"
+                android:layout_marginStart="11dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/ivCarImage"
                 tools:text="$20/day" />
@@ -55,17 +56,6 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                android:id="@+id/tvItemCarOwner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="0dp"
-                android:layout_toEndOf="@+id/ivCarImage"
-                android:gravity="right"
-                tools:text="renees" />
-
-            <TextView
                 android:id="@+id/tvModel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,6 +63,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/ivCarImage"
+                android:textStyle="bold"
                 tools:text="Model" />
 
             <TextView
@@ -82,6 +73,7 @@
                 android:layout_below="@+id/tvCarListingName"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/tvModel"
+                android:textStyle="bold"
                 tools:text=" Make" />
 
             <TextView
@@ -91,7 +83,18 @@
                 android:layout_below="@+id/tvCarListingName"
                 android:layout_marginTop="5dp"
                 android:layout_toEndOf="@+id/tvMake"
+                android:textStyle="bold"
                 tools:text=" Year" />
+
+            <TextView
+                android:id="@+id/tvNumSeats"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvModel"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@+id/ivCarImage"
+                tools:text="Seats 5 passengers" />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
