--- a/app/src/main/res/layout/activity_car_map.xml
+++ b/app/src/main/res/layout/activity_car_map.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MapDemoActivity" >
+    tools:context=".activities.CarMapActivity" >
 
     <fragment
         android:id="@+id/map"
