--- a/app/src/main/res/layout/activity_user_car_details.xml
+++ b/app/src/main/res/layout/activity_user_car_details.xml
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="175dp"
+        android:layout_marginStart="177dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="19dp"
         android:layout_toEndOf="@+id/tvCarDetailName"
@@ -68,7 +68,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ibtnEdit"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="177dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="19dp"
+        android:layout_toEndOf="@+id/tvCarDetailName"
         app:srcCompat="@android:drawable/ic_menu_my_calendar" />
 </RelativeLayout>
