--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,11 +21,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/mapSwitchLayout">
+
             <TextView
                 android:id="@+id/tvGoToMap"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Go to Map View"/>
+                android:layout_centerHorizontal="true"
+                android:text="Go to Map View"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
