--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -65,4 +65,15 @@
         android:layout_marginStart="68dp"
         android:layout_toEndOf="@+id/tvEventDetailEnd"
         app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <TextView
+        android:id="@+id/tvGetDirections"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvEventDetailCarOwner"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Get Directions!"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 </RelativeLayout>
