--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,9 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:hint="Username"
-            app:startIconDrawable="@drawable/ic_baseline_person_24">
+            android:id="@+id/tilLoginUsername"
+            app:startIconDrawable="@drawable/ic_baseline_person_24"
+            app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etUsername"
@@ -60,6 +62,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:hint="Password"
+            app:errorEnabled="true"
+            android:id="@+id/tilLoginPassword"
             app:startIconDrawable="@android:drawable/ic_lock_idle_lock">
 
             <com.google.android.material.textfield.TextInputEditText
